# fairness-indicators

./: 404.html  LICENSE  README.md  RELEASE.md  __init__.py  example_model_test.py  index.html  jupyter_test.py  mkdocs.yml  notebook_runner.py  pyproject.toml  pytest.ini  requirements-docs.txt  setup.py  test_runner.py  version.py
.github/: auto_assign-issues.yml
.github/ISSUE_TEMPLATE/: 00-bug-issue.md  10-build-installation-issue.md  20-documentation-issue.md  30-feature-request.md  40-performance-issue.md  50-other-issues.md
.github/workflows/: build.yml  jupyter.yml  test.yml
__init__/: index.html
demo/: Fairness_Indicators_Example_Colab.ipynb  Fairness_Indicators_on_TF_Hub.ipynb  README.md
docs/: _book.yaml  _index.yaml  index.md  overview.md
docs/examples/: index.md
docs/guide/: guidance.md
docs/tutorials/: Facessd_Fairness_Indicators_Example_Colab.ipynb  Fairness_Indicators_Example_Colab.ipynb  Fairness_Indicators_Pandas_Case_Study.ipynb  Fairness_Indicators_TFCO_CelebA_Case_Study.ipynb  Fairness_Indicators_TFCO_Wiki_Case_Study.ipynb  Fairness_Indicators_TensorBoard_Plugin_Example_Colab.ipynb  Fairness_Indicators_on_TF_Hub_Text_Embeddings.ipynb  _Deprecated_Fairness_Indicators_Lineage_Case_Study.ipynb  _toc.yaml  index.md
documentation/: guidance.md
examples/: Fairness_Indicators_Example_Colab.ipynb  Fairness_Indicators_TensorBoard_Plugin_Example_Colab.ipynb  Fairness_Indicators_on_TF_Hub_Text_Embeddings.ipynb  tensorboard_e2e_demo_standalone_binary.py
fairness_indicators/: RELEASE.md  example_model.py  example_model_test.py  fairness_indicators_metrics.py  jupyter_test.py  version.py
fairness_indicators/.github/: auto_assign-issues.yml
fairness_indicators/colab_examples/: Fairness_Indicators_Example_Colab.ipynb  Fairness_Indicators_on_TF_Hub_Text_Embeddings.ipynb  util_test.py
fairness_indicators/documentation/: _index.yaml  _toc.yaml  guidance.md  overview.md
fairness_indicators/examples/: Facessd_Fairness_Indicators_Example_Colab.ipynb  Fairness_Indicators_Example_Colab.ipynb  Fairness_Indicators_Lineage_Case_Study.ipynb  Fairness_Indicators_Pandas_Case_Study.ipynb  Fairness_Indicators_TFCO_CelebA_Case_Study.ipynb  Fairness_Indicators_TFCO_Wiki_Case_Study.ipynb  Fairness_Indicators_TensorBoard_Plugin_Example_Colab.ipynb  Fairness_Indicators_on_TF_Hub_Text_Embeddings.ipynb  README.md  util.py  util_test.py
fairness_indicators/jupyter_examples/: Fairness_Indicators_Example_Jupyter.ipynb  README.md  requirements.txt
fairness_indicators/remediation/: weight_utils.py  weight_utils_test.py
fairness_indicators/tensorboard_plugin/: README.md
fairness_indicators/tutorial_utils/: __init__.py  util.py  util_test.py
g3doc/guide/: _index.yaml  guidance.md
g3doc/tutorials/: Facessd_Fairness_Indicators_Example_Colab.ipynb  Fairness_Indicators_Example_Colab.ipynb  Fairness_Indicators_Lineage_Case_Study.ipynb  Fairness_Indicators_Pandas_Case_Study.ipynb  Fairness_Indicators_TFCO_CelebA_Case_Study.ipynb  Fairness_Indicators_TFCO_Wiki_Case_Study.ipynb  Fairness_Indicators_TensorBoard_Plugin_Example_Colab.ipynb  Fairness_Indicators_on_TF_Hub_Text_Embeddings.ipynb  _Deprecated_Fairness_Indicators_Lineage_Case_Study.ipynb  _toc.yaml
guide/: _toc.yaml
guide/guidance/: index.html
tensorboard_plugin/: README.md  demo.py  metadata.py  metadata_test.py  plugin.py  plugin_test.py  pytest.ini  setup.py  summary_v2.py  summary_v2_test.py
tensorboard_plugin/static/: index.js
tensorboard_plugin/tensorboard_plugin_fairness_indicators/: RELEASE.md  demo.py  metadata.py  metadata_test.py  plugin.py  plugin_test.py  summary_v2.py  summary_v2_test.py  version.py
tutorials/: index.html
tutorials/Facessd_Fairness_Indicators_Example_Colab/: index.html
tutorials/Fairness_Indicators_Example_Colab/: index.html
tutorials/Fairness_Indicators_Pandas_Case_Study/: index.html
tutorials/Fairness_Indicators_TFCO_CelebA_Case_Study/: index.html
(+30 files in other folders)
